--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,11 @@
     <div id="info">
       <h1>Web Audio Synth Pad</h1>
       <p>
-        Click and drag the mouse over the synthesizer pad to generate a sound.
+        <p>
+          Hex Note Input: <p contentEditable="true" id=hexInput>00</p>
+          <button id="submit" onclick="synthPad.playChromaticScale(500)">Submit</button>
+        </p>
+  
       </p>
       <p>
         Frequency: <span id="frequency">n/a</span>
